--- a/SorveteriaZequinha/frmFuncionarios.resx
+++ b/SorveteriaZequinha/frmFuncionarios.resx
@@ -120,4 +120,208 @@
   <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYQSURBVFhH5ZdrTJNXGMfdsmWLy9REsw9m+7B9NfPDkn3a
+        J822oBAd0aGigzHxMkBRAaWjUBigcrHcYYe7gKU3W661SKHQlptaQJCChVpKFbAy7geh5eXZOfRdsiXb
+        UlSMyf7Jk3Ny3ud9nt/7nFu74b9UVCTfkptbub+oSBFeVqbklZerIqTSBm+5vPkT1mV9xOcLdmRkSMTV
+        1S1LXV1GuH9/CHp6TGAwDMPAwAjo9QOgULQ1KxS6b9lXXp3i40u4IpHK3tbWB+UV9xwFlX1Y3vZkVt0z
+        MdvYbZut1phxjXpwaXDwMfT1mSmIoK6u+wP29ZcTj5dfWFPTCiXl2uX0GtNU8zgz3T8P2Pwc8PgS4Ek7
+        4AnSmjHMVt+fnVJqBpcslnFQqe61KxTtm9gwLyYOJ5srlaohMUu5mNUyZ1P/DrhjBnDPLGAjBjxMIKyL
+        gC3EhhYAG+YA11uXJ8WqR3NWqw3q6u7UsqHWrnPnMnekportadmK5eja6cfSR4BvPwWsmwKsJxC9BGKA
+        VIKCPCTWR5J3k7H2acBS0/KETDU4bzRaQals82NDrk3BwXxxSYkSfkrusqJuwDceAq4cAdzwzAlxh0B0
+        kYQ0KTUK1UaSN5Eq3RoDnKSat/YPWKGpqWsYAN5mw7omX9+ULbGxRUvcy9KlYLl9OLUDcEEvYKHRCVFv
+        A9w8CbiFJGwlRlstgWqcIMlHSQVItfJ6YCpHNmSjVSBrYW07w9//yv70dDF4BFYNBcmWLVe1gNPvAS58
+        ALicQMiHnYnqyZSoSEVUBEg5DriawImHAJcYAOd0AeaUPzWZTE+gqqolgQ3tmvz8YsOTkwXw5Sld2zt+
+        M7luGYuN0Q3MeAaBoJUoG3Amuml2wshIKzEBFpBpKuoDnN0JOLkV8MkSPEArUFGhqWJDuyYfn195cXHF
+        8PmJDvX7/jNo+/k5tDMKI69CuyS0hmmIVTOtlzVMc2Q9U3lawhT6ljrQSZGjjKNkGhJ0zEhSC+BYNeAj
+        hfZeg8EMtbUtaja0azp6NCoiJqYAvjih1W0PnkE7ozHanbKIvs+3I3+hAwVXMIhzi0GRtwFFqWC1f56M
+        0WfUx6fUXh1cyYx45y1005NSIlEr2dCu6dAhrjeXi+Cbk3LDjkiMdl1bpF+PAiQMiqhjUKIOUOZdQGR3
+        rFqmHlbHKFDATWbVlwKfyBnVUACBoD6DDe2aPD0vfnz2LH/lx6C8+a8SFnI98+zoZ4lj9WvTSeLr/YDk
+        ZkC1o06TWwCVkjH6jPpQ0APkncSy3kf0vigtveXFhnZdhw9HNoeFZcKB2O5G3xsOFE7KnNYBSGAEVDcG
+        qH0OUOeC02ifHFKrz6gPnZJzYixUax4wFRXaaYSqNrJhXZenJ+ebM2f4cDwoCwcJcUm8GlBhLyCy/ZCe
+        JDU6AFkYQCPEaJ+OUbDiPkBXtJCbI9KP6vUPgVzdcWzItevgQY7g4sUsOBlSNJHU/Pw6OYiQdhJQvx3Q
+        GEk8A06j/QEyppsGJDZB7m83u4zt7X108UFjo76TDbd2eXjwNnp5RbRfupQNQaForkAzUkPLPUS+eJIk
+        dhBjiNG+iYzpxrEoX6gdI8cvFBcrQKvtIW1tDBvuxbRvX9iHBKIyNDQDwjk5EJ0kHBfd1rf0Wm2VM4sO
+        0eizGZmu06i+Lm4yC4QNDL26U1NFdOVDR4cByA+Y6eiozDBDwkdSy7Wtp9iwa5eXF9eHnJBmLjcX4uOL
+        ITGxDFJShJCdLYPCwhqy0pWQlCSYioxEUSEh6WFk6jh8frkN5Ujhbt4xcocHwoTosxUzf+tpNuQL6S1v
+        75hdvr6xl48fj5cFBCSqAwOTasmWTQsJSTvI46G/rfYfjv0SXxHtDlOtFwCWtABP414JhMtKPbCtypKy
+        BeyN7rBivvb6Ia7u2eStCnx3ea7gT4jkNwVC87+G2Ewg9r5JEM41Ybvx6cowf5s767p++ieIhTEhPChw
+        h3pZmQfrtr76K8Rk5W5oSnaDDt1dyMqSHmJd1l8UQnHqveXigJ1QnC+FuLiiQR4v7eX+Sa1Vie6bv/ba
+        c+y7vXsvHHFz473e5P+uDRv+ADKyKTNetJCvAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAOw3AADsNwEH5WQiAAAEU0lE
+        QVRYR9WX229UVRSHxxf/ALw88o94e1VmWjARNBptiAlG45t02lSiD9BGIw0xRoK+GxTpzKA1pVRurbeQ
+        FhI1QWkVWlogrVBKVaYydPP71tn75MyZC8X2hZV8OWf2WZd9WXvtPZn7SlryhUxrvi+TyxcfFI+K9Z5H
+        aOMbOmsqciwKPB8SG0Wv+Eb8KiY9v/g2vrWKdbn2ktmuSnBgzvLFN8VPoixcoLWzZGxoL8RtAp0fBTbY
+        em/3IBiJB8STYkjcEskgFvTlnQPuwLHf3Ru937oN2wsuW62DDbaPi5XPRq6jmGnpLBH8RTEjYqdZBX1G
+        gVo6Su75d/rd9o9PuqsLN93M3KL78MvT7tmuQ+nZgItic66jgE8fpYGgIOc8XxKzInaE47ZdA+6jvjPu
+        xJmLbmJ63v2l4JXbyw5Z+q/ijo1Nudd3azZqO3FFbMkyuGadkBI8JaaFGWfbizYyRnj+0oK7vRwFbCQz
+        c3+73ftHnQKlOzElWFIfLSV8ECTNEREHf27H1640POGWblV8iOYyreV4/7NT9ToAg6I2MXPtUZIIMrci
+        LKEYOcHDNCelvFRx125UL8GRUxfcax8M1VuCAL63CcUq+eiSqKH4sGD7mDJOmPb0yAl68MQ51/XJiMvv
+        HbY8mJ5ddL2fjzZKwjQ/CGL56BJ+iE3C9jnZ3tZ92P156boPGwm/O/eN2NI8/VafbcP9Q2ejxKvdho0g
+        BsUqBLcqB1QxU2Krke3LiYRj5ATnW9BrUIhWQrfQllfZtpeotlNKTYF9zlZLysHj52zkQWeVEIuYcQc4
+        TKjnFuSFd/ttnwcpK8He/vS7qtHfDZYxSeo7sYgZd4ATjUPFlLf2HHaz8//48M7NXf/XvfreYD1HdWFZ
+        KFpbewYN3jeqLaFDLGKufQeC/W+T18wOzl64ap1I2Nd0oGYJxv/nEqCDLjZB8IXPRA79LKqWoCYJj5+e
+        8uaRFE6OJx00hK1I8UrK0dFJ+azS6xchCVe2DedvlK34NJsFvnVp9POLZW/l7OzY88VY2m6n0KmrDkS1
+        wDpAcYgL0Stasz9mqgsRhxGdYCZwiB7Yu+yY+vOXF7x2JEw/vhLrf1PkRBQc4YfgykWZNMVmpbg0MmHB
+        SEzYoXfakiNHOB8o0VTJ4Fd8L4jlo0vU+9CJ+DCCpoeRnIcsTyZcEGyKw+PmI/jzvu0wImaV0ChWfRwj
+        6BIc21Ti1j+Og/BBcIfj8hB3glEwlRxGzS4kfCNvwsmYCs7ef0z4aHWEj9nOr3huFlyjYgesY1v3gGX0
+        UV29KNUUKyDRaNtzYMwSLrXmcFlw2lqMpuKVuEBuEVwoY0ch46kTFBYqHvBOW9gZSRvByDdpNu5+KQ2C
+        osDgCcG61VzLmd6wDVNTHcCGfLJph3sWb0jSkLnclqr+mDQAHbYaNo0TbqWCg8RfsxbRIxr9NdslKDLr
+        uILr6b2skeDQQx3nMOFEA96ttsN9JJnMHdof0TcQdKCkAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAOw3AADsNwEH5WQiAAADa0lE
+        QVRYR9WXy04UQRSGxw0P4G3pUziggpC5hBgVnYWwQBM3itEYEyIx8bpQZCW6UV+BkCgu1IUaTTTxslZf
+        wAsZYDQRZrobZ4Yu/7+qmulLdc8wzkJP8oXp7lPnP9Vd51SR+q+skuv26ALbwQ7NNn1PPu+oyaBZGXgL
+        OAymwVPwGXzRfNL3+OwQ2FzJ9vx9Mgwgg+W6z4IPYBWIJtDnPeAYjtXRNmAcBDaBfvAC1IBJLAmO4di+
+        snqDOnoTo6OdTVN8FMwDU/CN8A0M65haJcboUMmk+fcoWAIqSDYtKpmd4cDx0JdjGvcWwAhIfhPaYQB8
+        B+vBrJH9wjl3wh/QDEUH9whn/JSwhjLhJL4CflKtFjI+AFw0z4EaRPEj+0TtzSvh/iiJ1esXw0Eb8H6+
+        R/y+Ny3c8oqozs2KyoGBsP8zEF2YVk6VDODKrQM5kDOvvX4pPHN/xiThid+FuG0p53pdVB/Nht8EY48B
+        aKa1Oow3wFbA8lHOmL1zaVy4lbIKqC2ShElcm1ucF/bJ0fD6eQeopdVhvAAFEKzzwd3mwF4SDBwnXloS
+        ztXzfmEParBZKfGyEifsYkHnpNlxTUxexrNbZvErEA/O3M9NkLLQHzxx9nG20qhzUhJYbK5t6ytlLYgT
+        asm9w0uAmwn7uck5MQm/tShOqEXN9QS4o3FTMTkrvCTu3xaiWtWSDXOXf+GbT7QiTqhFzXYSuGNOYGVZ
+        V0d7CXTmE8T1iSgfQeATtLcIMevIImwtiSdALcIyOhJ/gI2VYWlRONcu4JmhDJsncQOgDHepXsALwOYQ
+        bUTs7RFx32qPS9BLwh9P4YCDQInTeAF45GKbVI4I7kycka/Zb5FSS3pLC0Vhnz4eroy3gFpaHabPfCS4
+        GRXyovZ4Toi1NRUwrs5NSXAzejgTuxlRM2DyZng7RkkxAJNwF4vJTcafBLfjBzPYjvv94sS8HXvGB6AP
+        8PCgAyOJQk7YY8f8gcxQLP5AwtrvBVrNYHxo5WVVDAMeoxqB42Zugr5B8SLgbis1Eo0OljoR8wzHA6U/
+        UDtw5gU719P8UOoZHQEH7AX8bu0ey7meerE2ms/cZBwEuGi4cnlaavUfE5Yax8QvuFaNATSs3SEwBeL+
+        NZsEbDJSmHTUZL/IyMDs49xMuKMR/u6Sz8L1/W9bKvUHwmuWtJtdGycAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAFp0lE
+        QVRYR+1Wa0xTZxg+BWmpXaH0nFPlpptxRkzYFnUmItmcmcummTNetv1ZsgmocZcwkeGmmyzLjIJOHCAC
+        KrbcpAWBmeiYJsaMeSkiRSw3RaCMO+KoIhfFd+97epRWykC3/TDxSZ72O+c73/N8l/d9z2Ge4WmFBClD
+        ykVSm+79P3BzFf5cVgW5v5CwziO0eId6f8lutujMdvUZIrXpHvWtDHKfRs+KY/49yuJY5qOF8mm5Uaod
+        l39mr9WncEOViRxgG0xxNlZguy6Zg6ZD/NCVeLbOEKXa+UGw+zTLQV5UeQJ4e7nQnyRhrXJp+V62vDtT
+        A/WpHLSk8dB6mAfrEQ30GSZBX+4kod2ZroGbWRoYyp8Et/C69Ce2fN96jyWkMdmmNX7wnsIAl/i1yjA0
+        7biHooN5aIaG1CbePepI+/v3xOuGVK599xplKGmJmuMDnPJm9oYpl19P4TqdmTkjmQ7mcdjmh+/h2GvJ
+        XGfMx8rlYPQV1cfAltUKJmSxfIY5nq14HPOeI5PBlLkCzNpgGMjVDPehBsZJRcib8hmbVypEl1GgsW2T
+        5NhW1Z5e/bDImMSVX8l+Dzq7uqDsZDxYs2knhvtJK2+zKpa0RQ/n+HLZRCbsLfms2iTOQsFkL/IoaWXE
+        +/kaaEv3hdqLhWC1WuFKziphQvbPklb1Ps4Sitrh6DEq4LQ3c+Azj4092RphW+1F7DmYx0NHhje06Pyh
+        ResDpZnvQ0+PFYy/JkJ1sj/2+UI/ZseD50nLiprZmzw3/JWlEd2cw+VcjDqLIt7e0J5kXpXxOlQb86G+
+        6izUVxZDV7sF7gNAW1ONcG02/gI12jloPByQpPnb917p5GGzegTPa1wZuVSivLBLfW604BvC7bak+ULx
+        8VRoa2lCNtrYXA+tTXXQ0WrByTRDZekpaNDNxCNyjKPzMepzMjeJkrxGYGGglFn8itTPnMBdHypwNCbS
+        pOhofk99F/J1MVCQEevA/PRYOBq3GjJ2fwIXEl92yAQiFTEsTtffni3zI68RWPSSlHlnjmxKRTzbcDtn
+        ZAb06XkwGdZAZ0cbbjbAfdzzh8Trvr47UKSLhJLTOfBn+nRht+zHNx7g4dIetmHpXNkU8hqBAP8JjB/n
+        qsIYKKGyaj+YzrJWOxua682CuTP03raCIW07XDy5H7qzbIH3YPwAnj+9L/7YqTb6si6qAL8JoutITDgf
+        qzZgBRTK7gOBPj0H5hPfwt0h0c0JaAK5h3dAyYk4PCreYQKkhWlIQagnD5uVE0CtP5MV4bm1bA8L7VoU
+        EXO9HfP86qXjopVzDA70wzFDCpiK87Au+AnjyFwYj1r4QqNiFAnFPqKbE2z78Dlm03LFPAyWzpokThhM
+        Z1mnDcQovyZajUSluQK6u29AdXU1tLdiFmQteViMSINe1RdRMwK1v0OPUTHDR9gdtxPbvLQ04xsZGqx0
+        PJxNnAelpSVCsN3DHwfisRRm7IS6GpMwme7um6BPCodmrb9QAUmDjrQo2usQaYseowPf4cxXKxSvGnex
+        lsoEWoUGLidOhdPJy6C8MAJMBRsdWFYQAWeTFoBRtxJMhZFQnhsClSkvwq0cb2H1XRjQ+MXU+PUqxZy9
+        oUrR5R/go3ZhcCFMTqRq/dX9XK8F04e2cjCXg34D65RUHYV+PYv5zz5MQeH8dXyvLtxzHWliBoguYyBo
+        phv9SQ9+7hGN+dtLQiT4OKTtb9PyvWlfeH5DWvNtmuPHggA3xlMhkaHABtyJVsrlsd6QRJrsAL6IMO1a
+        cQGfekyUyMQFPT6m8ELNlmDkBmEQ5TSk8j139DYjmow96R710TOY75lRKxTzaaw/9x98HgfPktJHqhy/
+        aF7DXP7hzI/qIqxsV6sSuUYitfHzvKhwiyqanvFlXd3nTn/CVY8HKoXEfVGg1AffHVOJb2Abj8td7H6G
+        pwkM8zcyg1CsuR5qiAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAAnAAAAJwEqCZFPAAAFUUlE
+        QVRYR8WX21NTVxTGD4ktl6KtFlQu3sW0gBdSGbQPdcYHnjrTh/4Z9kGjtI61nb4QyAEECZdAwrSc5IRr
+        LgQdp+Ui+FjtQNVYptOW6VvxsfSRcfVbm30CST0h8TLdM2tOLvvs77fWXmeftZStxpFwj3I03GM9HO6u
+        PBTqchwIdYX2jbvj5WOd/5SO3aSS0Zu0Z7RjtXikPV40fCO8a/iGY+dQW9U7Q21WmFzlBcaxSC/MY62I
+        9JwFgAcAywBYAwDtH3cTAGgTAAGAAEAAWAPA8ttDrZ4dwdYzhcEW6/Zgi1w1g3E81qXYoh7lvain1Bbp
+        VSsivU8BQEfC3QSAhHgZxA2AvZsgAEDwnABAEF4BgPqWrpYU6qqS52+WKiajagLCEY9SOdFX+37UM2+L
+        9j5DJIgBWHivFGHbM9IhxBmkfLxT/I+twfdO8b8EoEK95VmBrt7N1112gCi5AVWqpYzqiX4IewDRVw+A
+        JQAQIgGvu2k3FmSvEFp6Fx6aARxEhLBVIloMs2u4DQAqAYDyA64neQHX+XwA5AZSIlF9a0CpjvUj/P21
+        AFkCADEAL2J4wtdMAThiRuR4rgQgCMff9DfX5mIrcvVGqY5xIuZlKwPAHACIATiUCJmwFwVAHgnj/JAA
+        BIC5N/xNZbB18ZOTXqXmttdyMuZVAUAMcACLFegucZMZAG8LL8wQnJRmAEY0izBfAtA2f5Oa812TxaoB
+        4hQATk36PgTAU0SBkPVClCebAXCmfzI7SoO/PSTt94f06eyYgDADYKf4M68Dz2mb1rRi1ZxnBMDpmM8C
+        AA8AiCPAAjwpHQBfP38wQ8b44m6MSofb0wKwcxxZEQGtiQDgVvxOi1Iz6auCLSMS4kYkSPYAM9GMANhB
+        Xgeek0Vz/gGrUuyTPgcA1pALYl9BBoDm1wDQT4i0SFiOAMTXcjTnBcV+yxcCgJjEYq8bgH/jKAOAcgad
+        OgPEGQDHrgh9KoBhCZBgK+F4pcv3p6U8UcN0hHYDKvVxZIhUAN4Kvl8CxAEwsMoAfAOLc3g2A9RPBckB
+        Mcf9KSF65cG0uIb/XJLyRJGln+kqInJ9YY6+Wpinrxfn6ZvFe/Tx9IjweAPAKyA4ghJglQGIAfaBHj8k
+        AeDopP5fF6RM9uP6bIwqRjsJp2wCADmHXOuQAI2UDJASgZcF+PJOiI4Od2wJkH4LvtfpEvb44g8hugRz
+        TIXF59Avi1KGKPz4J2qYitDVmQm6NhOja/Ccva8PuMk25k4CSN6Cxr8zSsI8QBVozVTod9GOgIprM13+
+        cUrKE10BVHGghcrh2X4czQcR9kMQPoY3aWVSDsgk1BNJ+JgBXv1jGDF/DFFjpDyGSQdRx6sBSHcQ4Z2R
+        dBBB/P89ij+YHHj5l1GGAP95GWmNFuN1fBYAKzypAjeyaDoAto/uaCLzG26P0rnBdirn5EsDwJ95HXYO
+        AH8BoC5RD9hTCxIsZJRRzwPggoStyK9Sseai0mDb1gUJ7mOnZEHSmPOt0wKQ9aoInrOVAmCWAfgmThYW
+        NwPYKMk68Q5wZ1OSzSAKJbB1cR4non1GUWoHQNyg5kVZOD2AeU2IrkrM3ShKXY8AYF8vSjcB8Dge6zPK
+        8vMAiBtl+WEcJiyWbVnOv+1MLssf4Wg/l/e8stwYiAAak16lMtp3GgBzfGiwJ+wRC3AHxEWLGQCX8dwt
+        8f9G5GRjMovGpAaFrpKnb9Gm2cZ7uC3bsjVjIaM1Y0vTmjmRRyUwtGatUiWDAc+N5rQOAG6ENtvmtAvN
+        ad32oJpdc5o64Dna826jPb8AgKBJe/4EAEMA+AwAaM9bM2jPFeVfno5qVTBPplYAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAATKSURBVFhH7ZdbU1NXFMfxtR+kIUirPvSho1OERFBqrQkz
+        PJSZMNMKXgIKhRACCCaQQEgAIUSQu5BwE5BcgFwgBBIhgoNand5mbMfO2MtLv8K/a50TFARfahtmOl0z
+        v5lz9t5rrf/ee52zz0n63/6O5bXmFccvE2/Zhmxjjlnxe/w2sXbGcKZxdnMUteNViReQbThtntoYwIs/
+        n6BmTJNYAWcMWZbxWBe+/TWK736LospZmjgBp+uzrM61dmy98GPzJx8e/eKH1lGUGAFZ9Zmtd6IWrD+f
+        QeSHaYHYz/dQPnL5j5cvX773TxBPtdcy9adu9kcaEPp+GIGnQwg8G0KQCP84jI5gNTTOC+9MjjUb8XS7
+        Lcsg7+hZuY75b+xwbdngemSDm/A8tsH7xIb5Z3Ys7IDvX/FUZI4hf8b7RMTz2A4380ikwlGwR8ChTL2s
+        0x6uwPSWGeMPjJhgNoyY3BS5yzx8C/ExDPuw73iMMWFs3YTRNROc94moCQ7i2oDqtQAAh07pM261L5XA
+        EavBYKQSQ9FK3LkvMrxGrFdihIntD/cL0Fj2GWIoBscaWNWhf0WHvrAOvcs69IR0uNKbKwrg5HJ9enfr
+        4hX0Rkpwa0mNrpAa3ctq3F4R6VklImrqJ6IifXG277mPx9ymsYJfWIzBsewU075YhM5gEWyBIrT7ilDQ
+        fR5Ccpn+ZE9L8BJsSwWwLqjQ6lehLaDCzSCxqEL7kgodIRVsyyKdYWLlDahtu5/Hsg/7cgyO1eJTCbEt
+        c/lo9uajyZOPfHsWkuR1aX3W4EVYfXmodynR4FHC5FWicV6JpgUFzD4Fmv0KWAIKWBeJJQVamNAbUJvQ
+        HxTHsg/7cozGOSWMXgVuzJ6F7q4cJY7jKOw/grPmD0QBjf581LlOQzNxArqpNNTcy0CtS44bHhn0XhkM
+        8zLUL8jQ4JPB6JfBFGAy0BgU4Wtu4756Xwb0c2m47j6BqtmPoZn6CKUTx6B2HMalO1IUDkpxoV+Kr3pT
+        8Fnzh/EtqDvZY6Il0k4fx+URKdROKYrHknFtQorSqRSUz6SiYjYVWlcqKt2p0HlSUeUV0XkPo9KTAq1b
+        Cs2sBGX3JPh6Jpn8yH8yGVfHk1E0mowrDikuD0txcUiKggES0ZeCc81HdhehJVCIatcngkMxOXIADsQB
+        yymwxiVBhVsCrUeCSu9rtAy1cd8rEdPJKGERExSLJqNmETS5SyRiexU+txzd+xi2LRajzpuOq+RYcpeS
+        U6CdyTmhbk6CqgXmfZF5aqc2FrJTRCmL2GcVCuOrcN5ybP8XkS1UTnsuF2ZfNiMGFGbOySlZNSWt8RH+
+        OHTNbSxMEEFiy8mHV27XKtDW8hZfpFoQBFj3ChCMX8Vd4WoqsCxhJjx7XmJOoA8ehXU1HS2RdLRGRfia
+        2yzhDJhDGWhaEovTSIXJhctFzMVcR0Vd65JRkctQNS1HXmfa/gLY+DDqXTXAEsoWZrQ9++5YLh1Gtahw
+        Fr4zOdZP3y6AjY/jwYgZbSvnBAG8170PvoBmRP3vH8fbxh8kI/dvwhZRCgL6N+hxdVxL/CfZ2HoXbq3l
+        YnDzS1Q7yw7mo3QyNoDl5924PqZNvAA2/ix3P5xE3UTNwQhgE39MlAcngO1Af83+Y5aU9Bfb0wVDXn3L
+        pwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAdsSURBVFhH1VdpVFTnGTY5TX80v3p6apREoowIFKTAgCgB
+        EoQJDiCIwAyLBElCkChigzbaJqJUFtmRYRMjiygKDuvADOsMAwIiywyI7OsAw2rF3ebEp98db4+lSXuq
+        nfzoc8575s53v/c+z7t8751Z8/+Kt3S0tLYy3nvPftOG9Sw9BkOfrP3ixa2fF28yNmh8tVFj3Zzmut/i
+        /fVrVUZdb9R4Z4ahuT6Y7HnjxdafAYwN74b/g/TfGeN9jT/T29ULYx0dDSN93ac6mzSxw9QYFmYmq2w7
+        0wibNd8F2fPI0NBwLe2mPjjZswJjoyMREX4K+lsYcHN2gr+vj8r2OO6CAVnLz8sl90/D2YntT7upD7vZ
+        uzJmpqfx7Nkz8IsKsdPSAls2blCZA8sW1UIh5pRKSMRiuDiyk2k39SE4KLCCIn/69CkePXqEB/fvqwhn
+        Z2exsLAAJfmcViggk8ng48m9TrupDyJhVSNF/uTJEzx8+BD37t3D8vLyKvKJiQl0dnaCdy65hnZTH5aX
+        lsSUgMePH+M+if6vd+9icXFRlYVpUhqKfHRkBDfb2iAkoN3Uh6WlpTIqeir9Kysrqujn5+cxMzODyclJ
+        jI6Oov/OHbS2tEAkFBbQbuqDUqlMoAQ8ePBAlX4qerIGxdQUxsbGMDQ4iO7ubpUAgUAQTrupDyMjI66U
+        gPsk+rsk/QtU9HTqh4eH0Xf7Njpu3VIJKCgosKXd1IfQ0NC3SfTLlABSjpfRk9QP9PdDLperBEilUgWT
+        yXyLdlMvSK1PUw1I1Z8SMEUEULUfGBhAb08PusgJEFZWhtDb1Y+wsLBfkeh7frIJyQmQd3c3cfbutWZ/
+        /hV/V8DXfHbgcT77wJ/4ToHH+F4eHtvox7w+LIKTGU23xwpUg4huRkrIIpkF4+PjyBfU53M/DQrR+5YP
+        rfBqMCLqoB0thnFkFfZxOHvox7w6mCfyWFax1Q3+BV0/DM+vqAbREjUD5uZUM2CQlIA6//XtcoRkCZ6b
+        RQuhH9sIPWJbzjaCGS16PQG6vpG/MTtTXmTLkz7fmdqMo+V9KO+ewNLdF8dQQabf0NAQekgDtrS24Xr7
+        MMLyRbCIr4NxcitMU2/BLK0D28n3VxagHZSgZRYlHGKnN8OW1wTrlGbYZ7bhRNUAeJJBXG7uQ6FUhiuS
+        LmSL5UhtHsNJsQLcpFJYJjXAlNcO84wuWGTJiV/rqwnQ9D7+a6O/VAw6qsilsEyWwprXDLuMNjh+1wH3
+        SzJ8UdyP4EuNCM6uRcCFGnDTRNjLq4bH6fPYSXwsMjphdUGOj3L64JzTAU939xMujo5Wq4zN3kpTrsam
+        P17NtE+Vwk5F3gjzRCmseDdgm3ETbCLAJbcb7pd7sed4IraFXYVF+HVYR5bANqYc9vFVsDnfAdvsXjhe
+        GYRL0Rg8isfhc6kdnJybcM66AcfzN+BAzPNopISmfAmt/We1mVGiv7EI+QdJEjDjxDBLbIQlEbCTCLC/
+        0AmnnG7sye+B8zdp0D5TC/0Y0umJzdjOa4N1Zgcc8u/AtXAYbnxCXjIJjzIFPMpn4S5Q4uPCCdgWTsGm
+        SAHPkyk/FqAZeiXe9pyE1FEMk9gGGMY0gJkgxY6UFnyY0Q4WEcDOkcHpUi9cvk2HblQDjOKlME9phVXG
+        LTgRcjdCzikeg1fZJLwrFPCunIV31Ry8hAtwLp2BffE0WMWz8DnF+5GAN/VOlo7bEAHM2HroRdVB/yyJ
+        jggwP9cCy/R22GR1gnVRBnYuKcHJTBjESmCafAMfpLXDPkdOyIfgyR+FT9kEPhEo4Fc1Cz/RHD6pXoBv
+        zRLcBHNwLFViVxlZC09bLUDX9cj6rRHVzy0SxDAg5JvJINEjAn6f0ARTImBH6k1YZXbC5jsZ7EiNXcMy
+        YXmO9ArVnBc74HWtD/6lw/CvmMB+wRQ+E87g82olDtQt4FD9PL5sWIS/SAkvkhFOpRJ+4f+SAR3PYxq6
+        Z0Q/mMTUQzuiViVgC5lkBvFNqnO9LbWd7m4ZPiICHGKK4RyRD+fIy3CPuQpuXCG8v0nCofJ+BIimEVSr
+        RFDdPP4gHIHfmXT4JxfO+3A4gfu43C8o8+JwdtPUL8E4UZisE1HznEGaa3NUPZlkEujFNWFrUitMyNne
+        RgTsyJLB8mIvPsy9A9v8QThdG4UrfwJupVPg8CoRIhjElzWzONwwj2DxIo5Wj+HT7PrHvsW9e2ma/4g3
+        Nn+dt1v7VGWDdnTD9zoxZKTGNUM/sRWGKe0wSeuE+Xk5rLJvwy5/AA5Xh7GbHDWX4gm4liqIgCocqRzC
+        oToljkgWcViyhGM14/D03e9HP/+/x+/8wtbph/E9DSJFCcZxklrSbGMWmV1PrMlwscnrB+vyENjXRuBU
+        NA6XEgXcyhTfc5NKVo5UDuNA7RwOkpoflCzjKBFA0v36L6N/AvW/75eG+0LX2oUX6NnECZgOvGpzVkyJ
+        kX1Y+sZ3DA3f9vRw4xysGMJnpPkCSPMF1C8iuGrkf3sbvgp8uNyPD57N7DucmNsXkpTXd5iymKw+H67b
+        T/xMW7Pm78wgaVIw7z3qAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
